--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -43,23 +43,6 @@
         <item>
          <layout class="QHBoxLayout" name="startPageWidget">
           <item>
-           <widget class="QScrollArea" name="navigationDrawerScrollArea">
-            <property name="widgetResizable">
-             <bool>true</bool>
-            </property>
-            <widget class="QWidget" name="navigationDrawerScrollAreaWidget">
-             <property name="geometry">
-              <rect>
-               <x>0</x>
-               <y>0</y>
-               <width>120</width>
-               <height>449</height>
-              </rect>
-             </property>
-            </widget>
-           </widget>
-          </item>
-          <item>
            <widget class="QWidget" name="pasteWidget" native="true">
             <layout class="QVBoxLayout" name="pasteWidgetLayout">
              <property name="topMargin">
@@ -100,58 +83,40 @@
               </layout>
              </item>
              <item>
-              <widget class="QLabel" name="googlePlayStoreLabel">
-               <property name="text">
-                <string>Google Play Store</string>
-               </property>
-               <property name="textFormat">
-                <enum>Qt::RichText</enum>
-               </property>
-               <property name="wordWrap">
-                <bool>true</bool>
-               </property>
-               <property name="openExternalLinks">
-                <bool>true</bool>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QLabel" name="donateLabel">
-               <property name="text">
-                <string>Donate</string>
-               </property>
-               <property name="textFormat">
-                <enum>Qt::RichText</enum>
-               </property>
-               <property name="wordWrap">
-                <bool>true</bool>
-               </property>
-               <property name="openExternalLinks">
-                <bool>true</bool>
-               </property>
-              </widget>
-             </item>
-            </layout>
-           </widget>
-          </item>
-          <item>
-           <widget class="QWidget" name="rssWidget" native="true">
-            <layout class="QVBoxLayout" name="rssWidgetLayout">
-             <property name="topMargin">
-              <number>0</number>
-             </property>
-             <item>
-              <widget class="QListWidget" name="rssListWidget">
-               <property name="iconSize">
-                <size>
-                 <width>80</width>
-                 <height>80</height>
-                </size>
-               </property>
-               <property name="wordWrap">
-                <bool>true</bool>
-               </property>
-              </widget>
+              <layout class="QHBoxLayout" name="horizontalLayout_2">
+               <item>
+                <widget class="QLabel" name="googlePlayStoreLabel">
+                 <property name="text">
+                  <string>Google Play Store</string>
+                 </property>
+                 <property name="textFormat">
+                  <enum>Qt::RichText</enum>
+                 </property>
+                 <property name="wordWrap">
+                  <bool>true</bool>
+                 </property>
+                 <property name="openExternalLinks">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLabel" name="donateLabel">
+                 <property name="text">
+                  <string>Donate</string>
+                 </property>
+                 <property name="textFormat">
+                  <enum>Qt::RichText</enum>
+                 </property>
+                 <property name="wordWrap">
+                  <bool>true</bool>
+                 </property>
+                 <property name="openExternalLinks">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+              </layout>
              </item>
             </layout>
            </widget>
@@ -260,7 +225,6 @@
     <addaction name="separator"/>
     <addaction name="actionDonate"/>
     <addaction name="separator"/>
-    <addaction name="actionCheckForUpdates"/>
     <addaction name="separator"/>
     <addaction name="actionForkMeOnGitHub"/>
     <addaction name="separator"/>
@@ -297,17 +261,6 @@
    </property>
    <property name="menuRole">
     <enum>QAction::AboutRole</enum>
-   </property>
-  </action>
-  <action name="actionCheckForUpdates">
-   <property name="text">
-    <string>Check for updates</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+U</string>
-   </property>
-   <property name="menuRole">
-    <enum>QAction::ApplicationSpecificRole</enum>
    </property>
   </action>
   <action name="actionDonate">
